# CoperniFUS

./: .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  requierements.txt
.github/workflows/: draft-pdf.yml  python-app.yml
coperniFUS/: __init__.py  __main__.py  viewer.py
coperniFUS/examples/: interactive_example.ipynb
coperniFUS/modules/: _jsonshelve.py  _stereotaxic_frame_helper_classes.py  anatomical_landmarks_calibration_helper.py  atlas.py  img_as_plane.py  internal_console.py  module_base.py  stereotaxic_frame.py  stl_handler.py  tooltip.py
coperniFUS/modules/armatures/: base_armature.py  kwave_armatures.py  mesh_armatures.py
docs/: conf.py  coperniFUS.interfaces.rst  coperniFUS.modules.anatomical_landmarks_calibration_helper.rst  coperniFUS.modules.armatures.base_armature.rst  coperniFUS.modules.armatures.kwave_armatures.rst  coperniFUS.modules.armatures.mesh_armatures.rst  coperniFUS.modules.atlas.rst  coperniFUS.modules.img_as_plane.rst  coperniFUS.modules.interfaces.kwave_interfaces.rst  coperniFUS.modules.interfaces.trimesh_interfaces.rst  coperniFUS.modules.internal_console.rst  coperniFUS.modules.rst  coperniFUS.modules.stereotaxic_frame.rst  coperniFUS.modules.stl_handler.rst  coperniFUS.modules.tooltip.rst  coperniFUS.viewer.rst  index.rst  requirements.txt
docs/contents/: api_reference.rst  installation.rst  key_features.rst  related_projects.rst  transformation_strings_syntax.rst  usage.rst
joss_paper/: neustim.bib  paper.md  references.bib
tests/: _IGNORE_DEBUG_pqtg.py  ipynb_test.ipynb  test_viewer.py
(+2 files in other folders)
