[build-system]
requires = [
  "setuptools >= 69",
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coperniFUS*"]
exclude = ["joss_paper*", "docs*", "*examples*"]

[project]
name = "coperniFUS"
description = "A flexible Python-based GUI for stereotaxic experiment planning"
authors = [
    { name = "Tom Aubier", email = "tom.aubier@inserm.fr" },
]
version = "0.1"
requires-python = ">=3.12"
dependencies = [
    "PyQt6==6.7.0",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "pyqtgraph==0.13.7",
    "bg_atlasapi==1.0.3",
    "brainglobe_atlasapi==2.0.7",
    "scikit-spatial==7.2.0",
    "si-prefix==1.3.3",
    "numpy-stl==3.1.1",
    "trimesh==4.0.1",
    "shapely==2.0.5",
    "rtree==1.3.0",
    "mapbox_earcut==1.0.1",
    "zarr==2.18.3",
    "pillow==10.3.0",
    "tqdm==4.66.4",
    "dask==2024.5.2",
    "rembg==2.0.59",
    "opencv-python==4.10.0.84",
    "matplotlib==3.9.0",
    "napari==0.5.4",
    "onnxruntime==1.19.2",
    "k-Wave-python==0.3.4",
]

[project.license]
text = "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"

[project.scripts]
coperniFUS = "coperniFUS.__main__:main"